--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,65 @@
-/* font-family: 'Quicksand', sans-serif;
-COLORS
-light-yellow - #f7e4bf;
-light-blue - #78a7c6;
-dark-blue - #134d71;
-white - #ffffff;
-black - #000000;
-*/
+:root {
+    /* Linear Gradient colors */
+    --light-yellow: #f7e4bf;
+    --light-blue: #78a7c6;
+    --dark-blue: #134d71;
+
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
+    color: #fff;
+    background: linear-gradient(var(--dark-blue), var(--light-blue), var(--light-yellow));
+    background-repeat: no-repeat;
+    height: 100vh;
+    
+}
+
+img {
+    max-width: 100%;
+}
+
+.container {
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 6rem;
+}
+
+.message-choice, section {
+    background-color: #fff;
+    border-radius: 0.8rem;
+    margin: 0 auto;
+    color: #000;
+    padding: 1rem;
+}
+
+.message-choice {
+    width: 40%;
+    margin-bottom: 4.5rem;
+}
+
+.message-choice > div {
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+a {
+    background-color: var(--dark-blue);
+    color: #fff;
+    padding: 0.2rem 1rem;
+    border-radius: 0.2rem;
+}
+
+section {
+    width: 65%;
+}
+
+section > img {
+    width: 4rem;
+}
